# GIGACHA_LIDAR

./: README.md
Gigacha_Lidar/: CMakeLists.txt  README.md  package.xml
Gigacha_Lidar/include/: clustering.h  include.h  pointcloud_generator.h  utility.h
Gigacha_Lidar/src/: clustering.cpp  pointcloud_generator.cpp  utility.cpp
Gigacha_Lidar/src/main/: practics_dynamic_main.cpp  practics_dynamic_mando.cpp
